// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GL parity — LunarShaderMoon > frame loop is unchanged 1`] = `
"clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.016)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.001837059137756089)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.032)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.003668249081989372)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.048)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.00549358858410088)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.064)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.007313096335583065)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.08)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.0091267909682112)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.096)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.010934691054234173)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.112)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.01273681510656466)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.128)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.014533181578968707)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.14400000000000002)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.016323808866254688)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.16)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.01810871530446167)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.176)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.019887919171047173)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.192)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.021661438685074346)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.20800000000000002)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.023429292007398506)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.224)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.025191497240853122)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.24)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.026948072430435184)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.256)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.028699035563489978)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.272)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.030444404569895292)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.28800000000000003)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.032184197322245)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.304)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.03391843163603209)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.32)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.03564712526983108)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.336)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.037370295925479906)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.352)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.039087961248261124)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.368)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.04080013882708265)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.384)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.04250684619465785)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.4)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.044208100827685094)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.41600000000000004)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.045903920147026676)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.432)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.04759432151788725)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.448)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.049279322249991625)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.464)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.05095893959776202)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.48)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.052633190760494754)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.496)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.05430209288253636)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.512)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.05596566305345915)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.528)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.057623918308236224)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.544)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.05927687562741587)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.56)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.06092455193729548)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.5760000000000001)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.06256696411009487)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.592)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.06420412896412903)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.608)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.06583606326398038)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.624)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.06746278372067041)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.64)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.06908430699183081)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.656)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.07070064968187405)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.672)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.07231182834216339)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.6880000000000001)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.0739178594711824)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.704)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.07551875951470387)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.72)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.07711454486595823)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.736)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.07870523186580143)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.752)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.08029083680288225)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.768)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.0818713759138091)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.784)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.08344686538331626)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.8)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.0850173213444297)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.8160000000000001)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.08658275987863218)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.8320000000000001)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.08814319701602795)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.848)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.08969864873550694)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.864)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.09124913096490836)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.88)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.09279465958118377)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.896)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.09433525041055972)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.912)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.09587091922869977)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.928)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.09740168176086601)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.9440000000000001)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform2f("uniform:program:2:uLibration", 0.10698587618013003, -0.09900720823173478)
uniform1f("uniform:program:2:uRadius", 0.7601635025965277)
uniform1f("uniform:program:2:uAge", 7.4)
uniform1f("uniform:program:2:uIllum", 0.5)
uniform1f("uniform:program:2:uAdapt", 0.09892755368208017)
uniform1f("uniform:program:2:uPurkinje", 1)
uniform1f("uniform:program:2:uTime", 0.96)
activeTexture(33984)
bindTexture(3553, "texture:8")
uniform1i("uniform:program:2:uSurface", 0)
drawArrays(5, 0, 4)"
`;

exports[`GL parity — LunarShaderMoon > init sequence is unchanged 1`] = `
"createShader(35633)
shaderSource("shader:0", "src:163:665e5330")
compileShader("shader:0")
getShaderParameter("shader:0", 35713)
createShader(35632)
shaderSource("shader:1", "src:6931:b09802f8")
compileShader("shader:1")
getShaderParameter("shader:1", 35713)
createProgram()
attachShader("program:2", "shader:0")
attachShader("program:2", "shader:1")
linkProgram("program:2")
deleteShader("shader:0")
deleteShader("shader:1")
getProgramParameter("program:2", 35714)
viewport(0, 0, 425, 425)
createVertexArray()
bindVertexArray("vao:3")
createBuffer()
bindBuffer(34962, "buffer:4")
bufferData(34962, [-1,-1,1,-1,-1,1,1,1], 35044)
enableVertexAttribArray(0)
vertexAttribPointer(0, 2, 5126, false, 0, 0)
createShader(35633)
shaderSource("shader:5", "src:163:665e5330")
compileShader("shader:5")
getShaderParameter("shader:5", 35713)
createShader(35632)
shaderSource("shader:6", "src:3924:7dc667de")
compileShader("shader:6")
getShaderParameter("shader:6", 35713)
createProgram()
attachShader("program:7", "shader:5")
attachShader("program:7", "shader:6")
linkProgram("program:7")
deleteShader("shader:5")
deleteShader("shader:6")
getProgramParameter("program:7", 35714)
createTexture()
bindTexture(3553, "texture:8")
texImage2D(3553, 0, 6408, 2048, 1024, 0, 6408, 5121, null)
texParameteri(3553, 10241, 9729)
texParameteri(3553, 10240, 9729)
texParameteri(3553, 10242, 10497)
texParameteri(3553, 10243, 33071)
createFramebuffer()
bindFramebuffer(36160, "fbo:9")
framebufferTexture2D(36160, 36064, 3553, "texture:8", 0)
viewport(0, 0, 2048, 1024)
useProgram("program:7")
bindVertexArray("vao:3")
drawArrays(5, 0, 4)
bindFramebuffer(36160, null)
deleteFramebuffer("fbo:9")
deleteProgram("program:7")
viewport(0, 0, 425, 425)
useProgram("program:2")
enable(3042)
blendFunc(1, 771)
getUniformLocation("program:2", "uRadius")
getUniformLocation("program:2", "uSurface")
getUniformLocation("program:2", "uAge")
getUniformLocation("program:2", "uIllum")
getUniformLocation("program:2", "uAdapt")
getUniformLocation("program:2", "uPurkinje")
getUniformLocation("program:2", "uTime")
getUniformLocation("program:2", "uLibration")"
`;

exports[`GL parity — MercuryTerminator > frame loop is unchanged 1`] = `
"clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.016)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.032)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.048)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.064)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.08)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.096)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.112)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.128)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.144)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.16)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.176)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.192)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.208)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.224)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.24)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.256)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.272)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.288)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.304)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.32)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.336)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.352)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.368)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.384)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.4)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.416)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.432)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.448)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.464)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.48)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.496)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.512)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.528)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.544)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.56)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.576)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.592)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.608)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.624)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.64)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.656)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.672)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.688)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.704)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.72)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.736)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.752)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.768)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.784)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.8)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.816)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.832)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.848)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.864)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.88)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.896)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.912)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.928)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.944)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.96)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)"
`;

exports[`GL parity — MercuryTerminator > init sequence is unchanged 1`] = `
"createProgram()
createShader(35633)
shaderSource("shader:1", "src:75:d868861b")
compileShader("shader:1")
getShaderParameter("shader:1", 35713)
attachShader("program:0", "shader:1")
createShader(35632)
shaderSource("shader:2", "src:1764:6138b7c8")
compileShader("shader:2")
getShaderParameter("shader:2", 35713)
attachShader("program:0", "shader:2")
linkProgram("program:0")
useProgram("program:0")
createBuffer()
bindBuffer(34962, "buffer:3")
bufferData(34962, [-1,-1,1,-1,-1,1,1,1], 35044)
getAttribLocation("program:0", "a")
enableVertexAttribArray(0)
vertexAttribPointer(0, 2, 5126, false, 0, 0)
getUniformLocation("program:0", "u_t")
getUniformLocation("program:0", "u_tw")
getUniformLocation("program:0", "u_day")
getUniformLocation("program:0", "u_bloom")
getUniformLocation("program:0", "u_flareCol")
getUniformLocation("program:0", "u_retro")
enable(3042)
blendFunc(770, 771)
viewport(0, 0, 180, 180)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0)
uniform1f("uniform:program:0:u_tw", 0.3)
uniform1f("uniform:program:0:u_day", 0.1)
uniform1f("uniform:program:0:u_bloom", 0)
uniform3fv("uniform:program:0:u_flareCol", [0.3199999928474426,0.699999988079071,0.949999988079071])
uniform1f("uniform:program:0:u_retro", 0)
drawArrays(5, 0, 4)"
`;

exports[`GL parity — ObserverEye > frame loop is unchanged 1`] = `
"clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.016)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.0845535183992312)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.032)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.16195773932477325)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.048)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.23281716103210934)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.064)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.29768516932235534)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.08)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.3570683592801105)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.096)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.4114304915931676)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.112)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.4611961143514711)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.128)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.5067538786102312)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.144)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.5484595736105105)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.16)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.5866389053612309)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.176)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.6215900402822964)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.192)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.6535859337737395)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.208)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.6828764618961541)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.224)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.709690372810047)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.24)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.7342370732141267)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.256)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.7567082637339495)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.272)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.7772794360327019)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.288)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.796111243335998)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.304)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.8133507550739841)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.32)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.8291326054390387)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.336)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.8435800448288776)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.352)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.856805902386446)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.368)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.868913467153675)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.384)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.8799972947205882)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.4)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.8901439456693885)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.416)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.8994326615804988)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.432)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9079359838799138)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.448)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9157203203608306)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.464)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9228464638038825)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.48)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9293700667462066)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.496)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9353420761071177)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.512)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9408091310646506)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.528)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9458139272902422)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.544)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9503955503860888)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.56)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9545897811292023)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.576)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9584293749060074)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.592)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9619443175197598)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.608)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9651620593685482)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.624)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.968107729822721)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.64)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9708043334759487)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.656)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.973272929802568)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.672)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.975532797624264)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.688)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9776015856705186)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.704)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.97949545040864)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.72)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.981229182219781)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.736)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9828163209063293)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.752)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9842692614327425)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.768)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9855993507256227)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.784)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9868169762890046)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.8)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9879316473269097)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.816)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9889520690067023)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.832)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9898862104432176)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.848)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9907413669345929)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.864)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9915242169358406)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.88)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9922408742151039)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.896)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.992896935599919)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.912)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9934975246863622)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.928)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9940473318524344)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.944)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9945506508881742)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0.96)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0.9950114125285647)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)"
`;

exports[`GL parity — ObserverEye > init sequence is unchanged 1`] = `
"createProgram()
createShader(35633)
shaderSource("shader:1", "src:75:d868861b")
compileShader("shader:1")
getShaderParameter("shader:1", 35713)
attachShader("program:0", "shader:1")
createShader(35632)
shaderSource("shader:2", "src:1595:bb3cecde")
compileShader("shader:2")
getShaderParameter("shader:2", 35713)
attachShader("program:0", "shader:2")
linkProgram("program:0")
useProgram("program:0")
createBuffer()
bindBuffer(34962, "buffer:3")
bufferData(34962, [-1,-1,1,-1,-1,1,1,1], 35044)
getAttribLocation("program:0", "a")
enableVertexAttribArray(0)
vertexAttribPointer(0, 2, 5126, false, 0, 0)
getUniformLocation("program:0", "u_t")
getUniformLocation("program:0", "u_focus")
getUniformLocation("program:0", "u_irid")
getUniformLocation("program:0", "u_speed")
getUniformLocation("program:0", "u_pulse")
getUniformLocation("program:0", "c0")
getUniformLocation("program:0", "c1")
getUniformLocation("program:0", "c2")
getUniformLocation("program:0", "u_gaze")
enable(3042)
blendFunc(770, 771)
viewport(0, 0, 28, 28)
clearColor(0, 0, 0, 0)
clear(16384)
uniform1f("uniform:program:0:u_t", 0)
uniform1f("uniform:program:0:u_focus", 0.58)
uniform1f("uniform:program:0:u_irid", 0)
uniform1f("uniform:program:0:u_speed", 0.14)
uniform1f("uniform:program:0:u_pulse", 0)
uniform3fv("uniform:program:0:c0", [1,0.843137264251709,0])
uniform3fv("uniform:program:0:c1", [0.8509804010391235,0.27450981736183167,0.9372549057006836])
uniform3fv("uniform:program:0:c2", [1,0.5882353186607361,0.23529411852359772])
uniform2fv("uniform:program:0:u_gaze", [0,0])
drawArrays(5, 0, 4)"
`;
